# TrabajoFG20

./: .gitignore  README.md
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/src/description/: CMakeLists.txt  package.xml
simulation_ws/devel/: .catkin  _setup_util.py  setup.sh
simulation_ws/src/: planar_movement.cpp
simulation_ws/src/move_plugin/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
simulation_ws/src/move_plugin/atomic_configure/: setup.sh
simulation_ws/src/move_plugin/catkin_generated/: generate_cached_setup.py  order_packages.py  setup_cached.sh
simulation_ws/src/move_plugin/cl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
simulation_ws/src/move_plugin/cl/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
simulation_ws/src/move_plugin/cl/catkin_generated/installspace/: cl.pc  clConfig.cmake
simulation_ws/src/move_plugin/devel/: .rosinstall  _setup_util.py  local_setup.sh
simulation_ws/src/move_plugin/devel/lib/pkgconfig/: cl.pc
simulation_ws/src/move_plugin/devel/share/cl/cmake/: clConfig.cmake
simulation_ws/src/move_plugin/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
simulation_ws/src/move_plugin/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
simulation_ws/src/move_plugin/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
simulation_ws/src/move_plugin/src/: MovePlugin.cpp  MovePlugin.h  gazebo_moving_drone.cpp  gazebo_moving_drone.h
(+58 files in other folders)
